# emojicodes

./: MANIFEST.in  README.rst  pyproject.toml  setup.py
.github/workflows/: main.yml
docs/source/: conf.py  index.rst
sphinxemoji/: codes.json  sphinxemoji.py  utils.py
